// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemsNumber ItemsNumber should render total number of items + customized title 1`] = `
<div class="tc-items-number"
     id="list-items-number"
>
  42 bananas
</div>
`;

exports[`ItemsNumber ItemsNumber should render total number of items + number of selected items 1`] = `
<div class="tc-items-number"
     id="list-items-number"
>
  11/42 items
</div>
`;

exports[`ItemsNumber ItemsNumber should render total number of items 1`] = `
<div class="tc-items-number"
     id="list-items-number"
>
  42 items
</div>
`;
